# babylog

./: .env.ci  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: CD.yml  CI.yml  checks.yml
src/actionlog/: apps.py  models.py  serializers.py  urls.py  views.py
src/actionlog/management/commands/: redis_migration.py
src/core/: env.py  settings.py  template.env  urls.py  wsgi.py
src/core/templates/: base.html  login.html  main.html
