[tool.poetry]
name = "baby"
version = "0.1.0"
description = ""
authors = ["BaranovAV <baranovab.1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
