[tool.poetry]
name = "baby"
version = "0.1.0"
description = ""
authors = ["BaranovAV <baranovab.1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
django-redis = "^5.4.0"
redis-om = "^0.3.3"
django-environ = "^0.12.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.3"}
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
isort = "^6.0.1"
flake8-builtins = "^2.5.0"
pep8-naming = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"
strict_settings = false

[tool.flake8]
max_line_length = 120
max_doc_length = 120
indent_size = 4
show_source = true
statistics = true
max_complexity = 10
